# HecO

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: build.rs  clean.rs  command.rs  completion.rs  config.rs  emulator.rs  lint.rs  main.rs  progress.rs  project.rs  run.rs  setup.rs  update.rs  updater.rs
src/adapters/: hvigor.rs  mod.rs  ohpm.rs
