[package]
name = "heco"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json5 = "0.2"
dirs = "6.0.0"
os_pipe = "0.9"
owo-colors = "4.0"
