[package]
name = "heco"
version = "0.0.1"
edition = "2024"
authors = ["Ockham Liu <ockhamliu@outlook.com>"]
description = "The HarmonyOS app development CLI tool built for you and AI agents."
repository = "https://github.com/heco-cli/heco"
license = "Apache-2.0"
readme = "README.md"
keywords = ["AI-Agent", "HarmonyOS", "CLI", "DevEco-Studio", "hvigor"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "cargo", "help", "unstable-styles"] }
anyhow = "1.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json5 = "0.2"
dirs = "6.0.0"
os_pipe = "1.2.3"
owo-colors = "4.0"
anstream = "1.0.0"
ctrlc = "3.5.2"
generic-array = "0.14.9"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
serde_json = "1.0.149"
indicatif = "0.17"
console = "0.15.8"
ureq = { version = "2", default-features = false, features = ["json", "native-tls", "gzip"] }

[target."cfg(windows)".dependencies]
winreg = "0.56.0"
